--- a/login.css
+++ b/login.css
@@ -4,12 +4,15 @@
     box-sizing: border-box;
 }
 
-.background{
+body{
     background-image: url(./image/perfume\ 5.jpg);
     background-blend-mode: overlay;
     background-color: #0005;
     background-size: cover;
     background-position: center;
+}
+
+.background{
     width: 100%;
     height: 50vw;
     display: flex;
@@ -134,7 +137,7 @@
     }
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1023px) {
     .background{
         height: 700px;
     }
