--- a/signup.css
+++ b/signup.css
@@ -4,12 +4,15 @@
     box-sizing: border-box;
 }
 
-.background{
+body{
     background-image: url(./image/perfume\ 7.jpg);
     background-blend-mode: overlay;
     background-color: #0005;
     background-size: cover;
     background-position: center;
+}
+
+.background{
     width: 100%;
     height: 50vw;
     display: flex;
@@ -131,10 +134,12 @@
 @media screen and (max-width: 480px) {
     .background{
         height: 700px;
+        justify-content: center;
+        align-items: center;
     }
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1023px) {
     .background{
         height: 700px;
     }
