--- a/login.css
+++ b/login.css
@@ -131,6 +131,23 @@ body{
     text-decoration: underline;
 }
 
+::-webkit-scrollbar {
+  width: 10px; /* Set scrollbar width */
+}   
+
+::-webkit-scrollbar-track {
+  background-color: black; /* Set track color */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gold; /* Set thumb color */
+    border-radius: 10px; /* Set thumb border radius */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: lightgoldenrodyellow; /* Set hover color */
+}
+
 @media screen and (max-width: 480px) {
     .background{
         height: 700px;
