--- a/roll-on.css
+++ b/roll-on.css
@@ -13,6 +13,17 @@ body{
     background-color: #0008 !important;
 }
 
+.nav-search{
+    visibility: visible;
+    width: 100vw !important;
+    margin-right: 70px;
+}
+
+.contain{
+    /* display: flex; */
+    flex-wrap: wrap !important;
+}
+
 .navbar-container{
     background-color: #0005;
     color: white;
@@ -91,6 +102,23 @@ body{
     content: url(./image/gold\ whatsapp.png);
 }
 
+::-webkit-scrollbar {
+  width: 10px; /* Set scrollbar width */
+}   
+
+::-webkit-scrollbar-track {
+  background-color: black; /* Set track color */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gold; /* Set thumb color */
+    border-radius: 10px; /* Set thumb border radius */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: lightgoldenrodyellow; /* Set hover color */
+}
+
 
 @media screen and (max-width: 480px) {
     .div-footer{
@@ -106,6 +134,11 @@ body{
 
     .text-div-footer{
         text-align: center;
+    }
+
+    .nav-search{
+        visibility: visible;
+        margin: auto;
     }
 }
 
@@ -124,5 +157,10 @@ body{
 
     .text-div-footer{
         text-align: center;
+    }
+
+    .nav-search{
+        visibility: visible;
+        margin: auto;
     }
 }
